--- a/css/source/styles.css
+++ b/css/source/styles.css
@@ -48,7 +48,7 @@ body {
 
 .nav-item:hover {
     color: #000000;
-    background: #F3F3F3;
+    background: #f3f3f3;
 }
 
 .nav-item:active {
@@ -64,7 +64,7 @@ body {
 }
 
 .nav-current {
-    background: #F3F3F3;
+    background: #f3f3f3;
     color: #4280eb !important;
 }
 
@@ -77,7 +77,7 @@ body {
     display: none;
     cursor: pointer;
     border-radius: 4px;
-    padding: 0px 8px;
+    padding: 0 8px;
     margin-right: -8px;
 }
 
@@ -94,12 +94,12 @@ body {
     cursor: default;
     text-align: left;
     color: #fff;
-    border: 1px solid rgba(0, 0, 0, .06);
+    border: 1px solid rgba(0, 0, 0, 0.06);
     border-bottom: 1px solid transparent;
     border-radius: 4px;
     background: #333;
     background-clip: padding-box;
-    box-shadow: 0 12px 24px rgba(0, 0, 0, .15);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
 }
 
 .popup-item {
@@ -113,7 +113,7 @@ body {
 .popup-item:hover {
     color: #fff;
     background: #69a335;
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .1);
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 .popup-menu-wrapper {
@@ -375,7 +375,7 @@ body {
 
 .animate-fadein {
     animation-name: animate-fadein;
-    animation-duration: .3s;
+    animation-duration: 0.3s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
 }
